Details
-
Bug
-
Resolution: Fixed
-
Major
-
0.4.15-dev-3270-g143b2a5 https://github.com/reactos/reactos/commit/143b2a50350b3c9608d65fbd2675f32e06c3babe
Description
reactos-bootcd-0.4.15-dev-5075-g34635e1-x86-gcc-lin-dbg
- Open RAPPS
- Show installed app and click on an item
Lower part show wrong hyperlink mapping (almost all text or all text) as soon as at least one hyperlink is used. Once it happens all use of this richedit, even out of "installed apps" will be affected
"Available Apps" (when used first) is not affected, even if hyperlinks are used

this is due to incorrect "trimming" of the CString buffer :
and fixed by

after applying this patch, display become correct again :

REGRESSION : Guilty commit is 143b2a5 from learn_more : https://github.com/reactos/reactos/commit/143b2a50350b3c9608d65fbd2675f32e06c3babe
Fix in https://github.com/reactos/reactos/pull/4973
reactos-bootcd-0.4.15-dev-3269-g0ed04e3-x86-gcc-lin-dbg

reactos-bootcd-0.4.15-dev-3270-g143b2a5-x86-gcc-lin-dbg

Attachments
Issue Links
- relates to
-
CORE-17091 Rapps URL in rich-edit range not correct (in reactos only)
-
- Resolved
-