[RAPPS] Fix Installed Apps information display (#4973)

This fixes hyperlinks highlighting the text before it.

CORE-18397